# trixie

hexapod_ws/: README.md  start_hexapod.sh
hexapod_ws/.git_disabled/: COMMIT_EDITMSG  config  index
hexapod_ws/.git_disabled/logs/: HEAD
hexapod_ws/.git_disabled/logs/refs/heads/: main
hexapod_ws/.git_disabled/logs/refs/remotes/origin/: main
hexapod_ws/.git_disabled/refs/remotes/origin/: main
hexapod_ws/src/hexapod_ai/: package.xml
hexapod_ws/src/hexapod_ai/hexapod_ai/: movement_generator.py
hexapod_ws/src/hexapod_ai/launch/: ai_control.launch.py
hexapod_ws/src/hexapod_ai/scripts/: ai_controller_node.py  sensor_aggregator_node.py
hexapod_ws/src/hexapod_bringup/: package.xml
hexapod_ws/src/hexapod_bringup/config/: hexapod.yaml
hexapod_ws/src/hexapod_bringup/launch/: hexapod.launch.py
hexapod_ws/src/hexapod_description/: CMakeLists.txt
hexapod_ws/src/hexapod_description/launch/: view_robot.launch.py
hexapod_ws/src/hexapod_description/urdf/: hexapod.urdf.xacro
hexapod_ws/src/hexapod_gait/: package.xml
hexapod_ws/src/hexapod_gait/hexapod_gait/: gait_generator.py
hexapod_ws/src/hexapod_hardware/: CMakeLists.txt  package.xml
hexapod_ws/src/hexapod_hardware/hexapod_hardware/: servo_driver.py
hexapod_ws/src/hexapod_hardware/scripts/: camera_driver_node.py  gps_driver_node.py  imu_driver_node.py  servo_driver_node.py
hexapod_ws/src/hexapod_kinematics/: package.xml
hexapod_ws/src/hexapod_kinematics/hexapod_kinematics/: body_pose.py  leg_ik.py
hexapod_ws/src/hexapod_kinematics/scripts/: ik_solver_node.py
hexapod_ws/src/hexapod_voice/: CMakeLists.txt
hexapod_ws/src/hexapod_voice/hexapod_voice/: czech_parser.py
hexapod_ws/src/hexapod_voice/launch/: voice_control.launch.py
hexapod_ws/src/hexapod_web/: package.xml
hexapod_ws/src/hexapod_web/scripts/: web_server_node.py
hexapod_ws/src/hexapod_web/static/: dashboard.js
hexapod_ws/src/hexapod_web/templates/: index.html
src/hexapod_ai/: CMakeLists.txt
src/hexapod_ai/hexapod_ai/: openrouter_client.py
src/hexapod_ai/scripts/: ai_controller_node.py  download_model.py  movement_execution_node.py  person_tracking_node.py
src/hexapod_bringup/: CMakeLists.txt
src/hexapod_bringup/launch/: simulation.launch.py
src/hexapod_bringup/scripts/: test_walking.py
src/hexapod_description/: package.xml
src/hexapod_description/config/: view_robot.rviz
src/hexapod_gait/: CMakeLists.txt
src/hexapod_gait/scripts/: gait_controller_node.py
src/hexapod_hardware/scripts/: servo_driver_node.py  ultrasonic_driver_node.py
src/hexapod_kinematics/: CMakeLists.txt
src/hexapod_voice/: package.xml
src/hexapod_voice/hexapod_voice/: czech_parser.py
src/hexapod_voice/scripts/: czech_command_node.py
src/hexapod_web/: CMakeLists.txt
src/hexapod_web/launch/: web_dashboard.launch.py
src/hexapod_web/static/: dashboard.js
src/hexapod_web/templates/: index.html
