<?xml version="1.0"?>
<package format="3">
  <name>hexapod_bringup</name>
  <version>0.0.1</version>
  <description>Launch files for hexapod robot</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>hexapod_description</exec_depend>
  <exec_depend>hexapod_hardware</exec_depend>
  <exec_depend>hexapod_kinematics</exec_depend>
  <exec_depend>hexapod_gait</exec_depend>
  <exec_depend>hexapod_ai</exec_depend>
  <exec_depend>hexapod_web</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
